--- a/GaussError/styleGauss.css
+++ b/GaussError/styleGauss.css
@@ -6,3 +6,35 @@ body{
 .cancel-button-vars .cancel-button-consts{
     margin: 0
 }
+
+.autocomplete {
+    position: relative;
+    display: inline-block;
+  }
+.autocomplete-items div:hover {
+    background-color: #e9e9e9;
+}
+.autocomplete-active {
+    background-color: DodgerBlue !important;
+    color: #ffffff;
+}
+.autocomplete-items {
+    position: absolute;
+    border: 1px solid #d4d4d4;
+    border-bottom: none;
+    border-top: none;
+    z-index: 99;
+    top: 100%;
+    left: 0;
+    right: 0;
+}
+.autocomplete-items div {
+    padding: 10px;
+    cursor: pointer;
+    background-color: #fff;
+    border-bottom: 1px solid #d4d4d4;
+}
+.constant-index {
+    display: none;
+    size: 0;
+}
